--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@
        <ul class="meals-showcase ">
         <li>
         <figure class="meal-photo">
-           <img class="foody" src="resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+           <img class="foody" src="resources\css\img\burger.jpg" alt="image">
         </figure>    
         </li>
         <li>
             <figure class="meal-photo">
-               <img class="foody" src="resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+               <img class="foody" src="resources\css\img\dhokla.jpg" alt="image">
             </figure>    
             </li>
             <li>
                 <figure class="meal-photo">
-                   <img  class="foody" src=" resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+                   <img  class="foody" src="resources\css\img\rolls.jpg" alt="image">
                 </figure>    
                 </li>
                 <li>
                     <figure class="meal-photo">
-                       <img class="foody" src=" resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+                       <img class="foody" src="resources\css\img\dosa.jpg" alt="image">
                     </figure>    
                     </li>
 
@@ -110,22 +110,22 @@
        <ul class="meals-showcase ">
         <li>
         <figure class="meal-photo">
-           <img class="foody" src=" resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+           <img class="foody" src="resources\css\img\sandwich.jpg" alt="image">
         </figure>    
         </li>
         <li>
             <figure class="meal-photo">
-               <img class="foody" src=" resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+               <img class="foody" src="resources\css\img\noodles.jpg" alt="image">
             </figure>    
             </li>
             <li>
                 <figure class="meal-photo">
-                   <img class="foody" src=" resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+                   <img class="foody" src="resources\css\img\biryani.avif" alt="image">
                 </figure>    
                 </li>
                 <li>
                     <figure class="meal-photo">
-                       <img class="foody" src="resources/css/img/Chicken-Biryani-Recipe.jpg" alt="image">
+                       <img class="foody" src="resources\css\img\pizza.jpeg" alt="image">
                     </figure>    
                     </li>
 
